fix text wrap

--- a/styles/Css/styles.css
+++ b/styles/Css/styles.css
@@ -174,6 +174,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  white-space: nowrap;
 }
 .mercury__bottom--rotation, .mercury__bottom--revolution, .mercury__bottom--radius, .mercury__bottom--average {
   border: 1px solid #38384f;
