--- a/styles/Sass/sections/__mercury.scss
+++ b/styles/Sass/sections/__mercury.scss
@@ -56,6 +56,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        white-space: nowrap;
+
         &--rotation,
         &--revolution,
         &--radius,
